Some fix inaccuracies in music.html, music-id.html
